Fixed image alignment and other minor CSS changes

--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,16 @@
 body {
     background-color: white;
-    width: 80%;
+    width: 100%;
     margin: 100px auto;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.container {
+    background-color: lightgray;
+    width: 80%;
+    padding: 10px;
+    margin: 0 auto;
+    border-radius: 5px;
 }
 
 h1 {
@@ -18,7 +26,6 @@ nav {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: black;
 }
-
 
 #nav_bar nav a {
     float: left;
@@ -61,13 +68,12 @@ nav {
 #social a:hover {
     background-color: grey;
     color: black;
+    transform: scale(1.5);
+    transition-duration: 1s;
 }
 
 #About {
-    background-color: lightgray;
     padding: 20px;
-    border-radius: 5px;
-
 }
 
 #photo_gallery h4 {
@@ -76,22 +82,26 @@ nav {
 
 #photo_gallery {
     background-color: lightgray;
-    padding: 20px;
-    border-radius: 5px;
 }
 
 .gallery {
+    width: 100%;
     background-color: darkgray;
+    text-align: center;
+    border-radius: 5px;
 }
 
 #photo_gallery figure {
     display: inline-block;
-    width: 31%;
-    height: auto;
+    width: 32%;
+    margin: auto;
     vertical-align: top;
-    border-radius: 5px;
-    margin: 0;
-    padding: 10px;
+}
+
+#photo_gallery figure img {
+    width: 100%;
+    border: 1px solid;
+    border-radius: 3px;
 }
 
 #photo_gallery figure img:hover {
@@ -99,38 +109,23 @@ nav {
     transition-duration: 1s;
 }
 
-
-#photo_gallery figure img {
-    width: 100%;
-    height: auto;
-    border: 1px solid;
-    padding: 0;
-}
-
 #photo_gallery figcaption {
     text-align: center;
 }
 
-
 #contact {
-    background-color: lightgray;
-    width: 80%;
     margin: auto;
     padding: 10px;
-    border-radius: 5px;
-
 }
 
 #contact_form label {
     display: inline-block;
     font-size: 16px;
-    
 }
 
 form {
     width: 80%;
-    margin: auto;
-    
+    margin: auto;  
 }
 
 #contact_form input[type=text] {
@@ -139,8 +134,7 @@ form {
     padding: 10px;
     box-sizing: border-box;
     font-size: 14px;
-    margin-bottom: 10px;
-    
+    margin-bottom: 10px; 
 }
 
 #contact_form textarea {
